test/TestSuite/Syntax/Correct/Timezone.tjp
project tz "Timezone" "1.0" 2005-06-06-00:00-+0000 - 2005-06-07-0:00-+0000 {
  timezone "Europe/Athens"
}

task item "Project" {
  start 2005-06-06-12:00
}

